--- a/527.tex
+++ b/527.tex
@@ -33,6 +33,63 @@
 
 \maketitle
 
+\section{Introduction}
+
+Kolmogorov's double-negation translation provides a powerful method for interpreting classical logic within the framework of intuitionistic logic. This translation allows classical theorems to be rephrased in a form acceptable to constructive reasoning, bridging the gap between two foundational views of logic. 
+
+Previous work by Brown~\cite{brown1998kolmogorov} presents a mechanization of this interpretation in the Twelf logical framework, including formalized translations of derivations and proofs of soundness and completeness. However, Twelf lacks certain computational expressiveness and modular reasoning capabilities that are desirable for exploring recursive proof transformations.
+
+In this project, we re-implement Brown's Kolmogorov interpretation in the \textbf{Beluga} proof environment. Beluga offers native support for recursive functions over contextual objects and enables computation over LF terms and derivations. These features allow us to define translations and verify meta-theoretical properties more naturally and effectively.
+
+Our work focuses on the functional translation of classical formulas and derivations, their transformation into intuitionistic proofs, and the verification of soundness and completeness within the Beluga system. Through this implementation, we aim to highlight Beluga’s strengths in mechanizing meta-theoretic reasoning about logic systems.
+
+\section{Approach and Contribution}
+
+\paragraph{Goal.} Our main goal is to formalize Kolmogorov's translation from classical natural deduction to intuitionistic natural deduction in Beluga, and to prove the \textit{soundness} and \textit{completeness} of this translation constructively.
+
+\paragraph{Approach.} We adopt the following methodology:
+\begin{enumerate}
+    \item Define a functional translation of formulas from classical to intuitionistic logic (Kolmogorov translation) using LF type \textbf{LF ktrans : o -> o -> type} (we call it kolm in paper proof). Also define the inference rules of ktrans to allow derivation.
+    \item Prove \textbf{soundness}: every classical derivation (after translation) yields a valid intuitionistic proof of the given translated formula \textbf{ rec sound : Rel [Γ] [Γ'] → [Γ ⊢ knd A[]] → [ ⊢ ktrans A A*] → [Γ' ⊢ nd A*[]]}. It's also based on two lemmas:
+    \begin{enumerate}
+      \item \textbf{Existence of Kolmogorov Translation}  
+      For every formula $A$, there exists an formula $A^*$ such that $\textsf{kolm}(A, A^*)$ holds.  
+      \textit{Beluga setup:}
+      \begin{verbatim}
+      rec existsktrans : {A : [⊢ o]} {A* : [⊢ o]} [⊢ ktrans A A*]
+      \end{verbatim}
+    
+      \item \textbf{Double Negation Property}  
+      All Kolmogorov Translation of a formula contains a double negation. 
+    \end{enumerate}
+    Then we can be free to use Hypothesis Induction, ¬I rule and ¬E rule to prove soundness.
+    \item Prove \textbf{completeness}: for every intuitionistic proof of a  translated formula, there exists a corresponding classical derivation. \textbf{rec equiv : Rel [Γ] [Γ'] → [⊢ ktrans A A*] → [Γ ⊢ knd A*[]] → [Γ ⊢ knd A[]]}. It's also based on two lemmas:
+    \begin{enumerate}
+      \item \textbf{Back-Translation Lemma}  
+      If we can prove intuitionistic formula $A$, a proof of classical formula $A$ exists.  
+      \textit{Beluga setup:}
+      \begin{verbatim}
+      rec nj_nk : Rel [Γ] [Γ'] → [Γ' ⊢ nd A[]] → [Γ ⊢ knd A[]]
+      \end{verbatim}
+    
+      \item \textbf{Kolmogorov Equivalence Lemma}  
+      If $A^*$ is the Kolmogorov translation of $A$, and $A^*$ is provable in classical natural deduction, thenthen the original formula $A$ is also provable in classical natural deduction.
+      \begin{verbatim}
+      rec equiv : Rel [Γ] [Γ'] → [⊢ ktrans A A*] → [Γ ⊢ knd A*[]] 
+      → [Γ ⊢ knd A[]]
+      \end{verbatim}
+    \end{enumerate}
+    Then all cases of completeness can be proved in the same way by using these two lemmas.
+\end{enumerate}
+
+\paragraph{Contribution.} This work contributes:
+\begin{itemize}
+    \item A mechanized and executable implementation of Kolmogorov translation in Beluga.
+    \item Proof of lemmas and inference rules needed using recursive functions.
+    \item A constructive proof of soundness and completeness of the Kolmogorov embedding in Beluga.
+\end{itemize}
+Our Beluga implementation demonstrates the expressiveness and utility of dependently-typed meta-programming for logic translation and proof theory.
+
 \section{Idea}
 
 The key difference between intuitionistic logic and classical logic lies in the acceptance of the law of excluded middle. Our goal is to explore the connection between the two systems, showing that they are essentially equivalent under double negation translation.
@@ -79,8 +136,12 @@ For the natural deduction we have these rules for
 
 % Row 4: ¬I, ¬E
 \[
-\infer[\neg I^{p,u}]{\vdash \neg A}{
+\infer[\neg I^{u}]{\vdash \neg A}{
   \infer*{\vdash \perp}{\infer[u]{\vdash A}{}}
+}
+\qquad
+\parbox{0.45\linewidth}{\footnotesize
+  For convenience, we instantiate this rule with $\perp$ rather than an arbitrary proposition $p$, since $\perp \rightarrow p$ holds intuitionistically.
 }
 \hspace{3cm}
 \infer[\neg E]{\vdash C}{
@@ -163,7 +224,62 @@ A^* &= nA \quad \text{if } A \text{ is atomic} \\
 \end{align*}
 
 
+\section{Kolm rules}
 
+% ------------------ helpers ---------------------------------
+\newcommand{\kolm}{\mathsf{kolm}}   % typeset in sans-serif math
+\newcommand{\nneg}{\neg\neg}        % short for double negation
+% ------------------------------------------------------------
+
+\[
+\infer[\kolm_{\land}]
+  {\kolm (A \land B)\; \nneg (A^{*} \land B^{*})}
+  {
+    \kolm A\; A^{*}
+    &
+    \kolm B\; B^{*}
+  }
+\]
+
+\[
+\infer[\kolm_{\supset}]
+  {\kolm (A \supset B)\; \nneg (A^{*} \supset B^{*})}
+  {
+    \kolm A\; A^{*}
+    &
+    \kolm B\; B^{*}
+  }
+\]
+
+\[
+\infer[\kolm_{\lor}]
+  {\kolm (A \lor B)\; \nneg (A^{*} \lor B^{*})}
+  {
+    \kolm A\; A^{*}
+    &
+    \kolm B\; B^{*}
+  }
+\]
+
+\[
+\infer[\kolm_{\neg}]
+  {\kolm (\neg A)\; \nneg (\neg A^{*})}
+  {
+    \kolm A\; A^{*}
+  }
+\]
+
+\[
+\infer[\kolm_{\top}]
+  {\kolm \top\; \nneg \top}
+  {}
+\]
+
+\[
+\infer[\kolm_{\bot}]
+  {\kolm \bot\; \nneg \bot}
+  {}
+\]
 
 \section{Inference Rules}
 Before we step into the proof of soundness and completeness we need some 
@@ -177,61 +293,48 @@ it as $\neg\neg\neg R$.
 
 % First boxed derivation
 \[
-\infer[\neg I^{p,u}]{\vdash \neg\neg A}{
-    \infer[\neg E]{\vdash p}{
-        \infer [u]{\vdash \neg A}{} & \vdash A
+\infer[\neg I^{u}]{\neg\neg A}{
+    \infer[\neg E]{\bot}{
+        \infer [u]{\neg A}{} & A
     }
 }
 \quad \Rightarrow \quad
 \fbox{$
-    \infer[\neg \neg X]{\vdash \neg \neg A}{\vdash A}
-$}
-\]
-
-% Second boxed derivation
-\[
-\infer[\neg kI^{p,u}]{\vdash \neg\neg A}{
-    \infer[\neg kE]{\vdash p}{
-        \infer [u]{\vdash \neg A}{} & \vdash A
-    }
-}
-\quad \Rightarrow \quad
-\fbox{$
-    \infer[\neg \neg kX]{\vdash \neg \neg A}{\vdash A}
+    \infer[\neg \neg X]{\neg \neg A}{ A}
 $}
 \]
 
 % Third boxed derivation
 \[
-    \infer[\neg I^{q,u}]{\vdash \neg A}{
-        \infer[\neg E]{\vdash q}{ 
-              \infer[\neg \neg X]{\vdash \neg \neg A}{\infer[u]{\vdash A}{}} &
-              \infer[v]{\vdash \neg \neg \neg A}{}
+    \infer[\neg I^{u}]{\neg A}{
+        \infer[\neg E]{\bot}{ 
+              \infer[\neg \neg X]{\neg \neg A}{\infer[u]{A}{}} &
+              \infer[v]{\neg \neg \neg A}{}
         }
       }
 \quad \Rightarrow \quad
 \fbox{$
     \infer [\neg \neg \neg R]
-    {\vdash \neg A}
-    {\vdash \neg\neg \neg A} 
+    {\neg A}
+    {\neg\neg \neg A} 
 $}
 \]
 
 % Fourth boxed derivation
 % Fourth boxed derivation  (re‑done for dneg_falser)
 \[
-\infer[\bot E]{\vdash C}{
-  \infer[\neg E]{\vdash p}{
-    \vdash \neg\neg\bot
+\infer[\bot E]{C}{
+  \infer[\neg E]{\bot}{
+    \neg\neg\bot
     &
-    \infer[\neg I^{u}]{\vdash \neg\bot}{
-      \infer[u]{\vdash \bot}{}
+    \infer[\neg I^{u}]{\neg\bot}{
+      \infer[u]{\bot}{}
     }
   }
 }
 \quad \Rightarrow \quad
 \fbox{$
-  \infer[\neg\neg\bot E]{\vdash C}{\vdash \neg\neg\bot}
+  \infer[\neg\neg\bot E]{C}{\neg\neg\bot}
 $}
 \]
 
@@ -346,12 +449,13 @@ Now with the help of our derivation rule, and lemma we can prove our soundness t
 
 \text{Case:}
 \vspace{3em}
+\text{Case:}
 \[
 \infer[\land kI]{A \land^k B}{A & B}
 \quad \Rightarrow \quad
-\infer[\neg\neg X]{\neg\neg(\neg\neg A \land \neg\neg B)}{
-    \infer[\land I]{\neg\neg A \land \neg\neg B}{
-      \neg\neg A & \neg\neg B
+\infer[\neg\neg X]{\neg\neg(\neg\neg A' \land \neg\neg B')}{
+    \infer[\land I]{\neg\neg A' \land \neg\neg B'}{
+      \neg\neg A' & \neg\neg B'
     }
 }
 \]
@@ -363,21 +467,16 @@ Now with the help of our derivation rule, and lemma we can prove our soundness t
   A \land^k B
 }
 \quad \Rightarrow \quad
-\infer[\neg I^{p,v}]{ \neg \neg A}{ 
-  \infer[\neg E]{ p}{
-    \infer[u]{
-        \neg \neg (\neg \neg A \land \neg \neg B)
-     }{}
-     \infer[]{
-        \neg (\neg \neg A \land \neg \neg B)
-     }{
-        \infer[\neg I^{q,u}]{ q}{
-            \infer[\land E1]{\neg \neg A }{
-                \infer[u]{\neg \neg A \land \neg \neg B}{}
-            }
-            \infer[v]{\neg A}{}
-        }
-     }
+\infer[\neg I^{v}]{\neg \neg A'}{ 
+  \infer[\neg E]{\perp}{
+    \neg \neg (\neg \neg A' \land \neg \neg B')
+    \hspace{1em}
+    \infer[\neg I^{u}]{\neg (\neg \neg A' \land \neg \neg B')}{
+      \infer[\land E1]{\neg \neg A'}{
+         {\infer[u]{\neg \neg A' \land \neg \neg B'}{}}
+      }
+      \infer[v]{\neg A'}{}
+    }
   }
 }
 \]
@@ -389,21 +488,16 @@ Now with the help of our derivation rule, and lemma we can prove our soundness t
   A \land^k B
 }
 \quad \Rightarrow \quad
-\infer[\neg I^{p,v}]{\neg \neg B}{ 
-  \infer[\neg E]{p}{
-    \infer[u]{
-        \neg \neg (\neg \neg A \land \neg \neg B)
-     }{}
-     \infer[]{
-        \neg (\neg \neg A \land \neg \neg B)
-     }{
-        \infer[\neg I^{q,u}]{ q}{
-            \infer[\land E2]{\neg \neg B }{
-                \infer[u]{\neg \neg A \land \neg \neg B}{}
-            }
-            \infer[v]{\neg B}{}
-        }
-     }
+\infer[\neg I^{v}]{\neg \neg B'}{ 
+  \infer[\neg E]{\perp}{
+    \neg \neg (\neg \neg A' \land \neg \neg B')
+    \hspace{1em}
+    \infer[\neg I^{u}]{\neg (\neg \neg A' \land \neg \neg B')}{
+      \infer[\land E2]{\neg \neg B'}{
+        {\infer[u]{\neg \neg A' \land \neg \neg B'}{}}
+      }
+      \infer[v]{\neg B'}{}
+    }
   }
 }
 \]
@@ -417,12 +511,12 @@ Now with the help of our derivation rule, and lemma we can prove our soundness t
   }
 }
 \quad \Rightarrow \quad
-\infer[\neg \neg X ] {\neg \neg(\neg \neg A \supset \neg \neg B )}{
-\infer[\supset  I^u]{\neg \neg A \supset \neg \neg B}{
-  \infer*[]{\neg \neg B}{
-    \infer[u]{\neg \neg A}{}
+\infer[\neg \neg X]{\neg \neg(\neg \neg A' \supset \neg \neg B')}{
+  \infer[\supset I^u]{\neg \neg A' \supset \neg \neg B'}{
+    \infer*[]{\neg \neg B'}{
+      \infer[u]{\neg \neg A'}{}
+    }
   }
-}
 }
 \]
 
@@ -430,33 +524,33 @@ Now with the help of our derivation rule, and lemma we can prove our soundness t
 \text{Case:}
 \[
 \infer[\supset kE]{B}{
-    A \supset^k B & A
+  A \supset^k B \quad A
 }
 \quad \Rightarrow \quad
-\infer[\neg I^{q,v}] {\neg \neg B }{
-\infer[\neg E]{q}{
-    \infer[u]{\neg \neg(\neg \neg A \supset \neg \neg B )}{}
-    \infer[\neg I^{p,u}]{\neg(\neg \neg A \supset \neg \neg B )}{
-        \infer[\neg E]{p}{
-            \infer[\supset E]{\neg \neg B}{
-                \infer[u]{\neg \neg A \supset \neg \neg B}{}
-                {\neg \neg A}
-            }
-            \infer[v]{\neg B}{}
+\infer[\neg I^{v}]{\neg \neg B'}{
+  \infer[\neg E]{\perp}{
+    \neg \neg (\neg \neg A' \supset \neg \neg B')
+    \hspace{1em}
+    \infer[\neg I^{u}]{\neg (\neg \neg A' \supset \neg \neg B')}{
+      \infer[\neg E]{\perp}{
+        \infer[\supset E]{\neg \neg B'}{
+          {\infer[u]{\neg \neg A' \supset \neg \neg B'}{}} \quad \neg \neg A'
         }
+        \infer[v]{\neg B'}{}
+      }
     }
-}
+  }
 }
 \]
-
 
 \vspace{3em}
 \text{Case:}
 \[
 \infer[\lor kI1]{A \lor^k B}{A}
 \quad \Rightarrow \quad
-\infer[\neg \neg X]{\neg \neg(\neg \neg A \lor \neg \neg B)}{
-    \infer[\lor I1]{\neg \neg A \lor \neg \neg B}{\neg \neg A
+\infer[\neg \neg X]{\neg \neg(\neg \neg A' \lor \neg \neg B')}{
+    \infer[\lor I1]{\neg \neg A' \lor \neg \neg B'}{
+        \neg \neg A'
         \infer[]{}{}
     }
 }
@@ -467,38 +561,77 @@ Now with the help of our derivation rule, and lemma we can prove our soundness t
 \[
 \infer[\lor kI2]{A \lor^k B}{B}
 \quad \Rightarrow \quad
-\infer[\neg \neg X]{\neg \neg(\neg \neg A \lor \neg \neg B)}{
-    \infer[\lor I2]{\neg \neg A \lor \neg \neg B}{\neg \neg B
+\infer[\neg \neg X]{\neg \neg(\neg \neg A' \lor \neg \neg B')}{
+    \infer[\lor I2]{\neg \neg A' \lor \neg \neg B'}{
+        \neg \neg B'
         \infer[]{}{}
     }
 }
 \]
 
 
+
 \vspace{3em}
 \text{Case:}
 \[
 \infer[\lor kE^{u,v}]{C}{
-    {A \lor^{k} B}
+    A \lor^k B
     \hspace{2em}
     \infer*[]{C}{\infer[u]{A}{}}
     \hspace{2em}
     \infer*[]{C}{\infer[v]{B}{}}
 }
 \quad\Longrightarrow\quad
-\infer[\lor E^{u,v}]{\neg\neg C}{
-    \infer[\neg\neg E]{\neg\neg A \;\lor\; \neg\neg B}{
-        \neg\neg\!\bigl(\neg\neg A \lor \neg\neg B\bigr)}
-    \hspace{2em}
-    \infer*[]{\neg\neg C}{
-        \infer[u]{\neg\neg A}{}}
-    \hspace{2em}
-    \infer*[]{\neg\neg C}{
-        \infer[v]{\neg\neg B}{}}
+\infer[\neg I^x]{\neg\neg C'}{
+  \infer[\neg E]{\perp}{
+    \neg\neg (\neg\neg A' \lor \neg\neg B') \hspace{1.5em}
+    \infer[\neg I^y]{\neg (\neg\neg A' \lor \neg\neg B')}{
+      \infer[\neg E]{\perp}{
+        \infer[\lor E^{u,v}]{\neg\neg C'}{
+          {\infer[y]{\neg\neg A' \lor \neg\neg B'}{}} \hspace{1em}
+          \infer*[]{\neg\neg C'}{\infer[u]{\neg\neg A'}{}}
+          \hspace{1em}
+          \infer*[]{\neg\neg C'}{\infer[v]{\neg\neg B'}{}}
+        }
+        \hspace{1em}
+        {\infer[x]{\neg\neg C'}{}}
+      }
+    }
+  }
 }
 \]
 
+\vspace{3em}
+\text{Case:}
+\[
+\infer[\neg kI^u]{\neg A}{
+  \infer*[]{\bot}{\infer[u]{A}{}}
+}
+\quad \Rightarrow \quad
+\infer[\neg I^v]{\neg\neg\neg A'}{
+  \infer[\neg\neg\bot E]{\bot}{
+    \infer[v]{\neg\neg A'}{}
+    \hspace{2em}
+    \infer*[]{\neg\neg\bot}{\infer[u]{A'}{}}
+  }
+}
+\]
 
+\vspace{3em}
+\text{Case:}
+\[
+\infer[\neg kE]{C}{
+  \neg A \quad A
+}
+\quad \Rightarrow \quad
+\infer[\neg E]{C'}{
+    \infer[\neg\neg\neg R]{\neg A'}{
+      \neg\neg\neg A'
+    }
+  \quad
+  \infer{A'}{}
+}
+\]
 
 
 
@@ -509,61 +642,20 @@ Now with the help of our derivation rule, and lemma we can prove our soundness t
     \neg\neg A
 }
 \quad \Rightarrow \quad
-\infer[\neg\neg\neg R]{\neg \neg A}{
-    \neg\neg\neg\neg A
+\infer[\neg\neg\neg R]{
+  \neg\neg A'
+}{
+  \infer[\neg\neg\neg R]{
+    \neg\neg\neg\neg A'
+  }{
+    \infer[\neg\neg\neg R]{
+      \neg\neg\neg\neg\neg\neg A'
+    }{
+      \neg\neg\neg\neg\neg\neg\neg\neg A'
+    }
+  }
 }
 \]
-
-\vspace{3em}
-\text{Case:}
-\[
-\infer[\neg\neg E]{A}{
-    \neg\neg A
-}
-\quad \Rightarrow \quad
-\infer[\neg\neg\neg R]{\neg \neg A}{
-    \neg\neg\neg\neg A
-}
-\]
-
-
-
-
-
-
-
-\section{Kolm rules}
-% ------------------ helpers ---------------------------------
-\newcommand{\kolm}{\mathsf{kolm}}   % typeset in sans-serif math
-\newcommand{\nneg}{\neg\neg}            % short for double negation
-% ------------------------------------------------------------
-
-\begin{align*}
-\kolm_{\land I}&:\;
-  \kolm\,A\,A^{*}\;\to\;
-  \kolm\,B\,B^{*}\;\to\;
-  \kolm\!\bigl(A\!\land\!B\bigr)\;
-  \nneg\!\bigl(A^{*}\land B^{*}\bigr) \\[4pt]
-\kolm_{\supset I}&:\;
-  \kolm\,A\,A^{*}\;\to\;
-  \kolm\,B\,B^{*}\;\to\;
-  \kolm\!\bigl(A\!\supset\!B\bigr)\;
-  \nneg\!\bigl(A^{*}\supset B^{*}\bigr) \\[4pt]
-\kolm_{\lor I}&:\;
-  \kolm\,A\,A^{*}\;\to\;
-  \kolm\,B\,B^{*}\;\to\;
-  \kolm\!\bigl(A\!\lor\!B\bigr)\;
-  \nneg\!\bigl(A^{*}\lor B^{*}\bigr) \\[4pt]
-\kolm_{\neg I}&:\;
-  \kolm\,A\,A^{*}\;\to\;
-  \kolm\bigl(\neg A\bigr)\;
-  \nneg\!\bigl(\neg A^{*}\bigr) \\[4pt]
-\kolm_{\top}&:\;
-  \kolm\,\top\;\nneg\top \\[4pt]
-\kolm_{\bot}&:\;
-  \kolm\,\bot\;\nneg\bot
-\end{align*}
-
 
 
 
@@ -576,454 +668,229 @@ Now with the help of our derivation rule, and lemma we can prove our soundness t
 
 
 \section{Completeness}
-lemma 3: if we can proof nd A then we can also proof knd A
-\begin{proof}[Proof]
-  \leavevmode\par
-  \textbf{Induction hypothesis (IH).}\;
-  For every proper subformula $B$ of $A$,
-  \(
-    \operatorname{kolm}(B,B^{*}),\;
-    \vdash_{\textit{KND}} B^{*}
-    \;\Rightarrow\;
-    \vdash_{\textit{KND}} B .
-  \)
-  
-  \medskip
-  \textbf{Assumptions for the current step}
-  \[
-    \operatorname{kolm}(A,A^{*}),\qquad
-    \Gamma\vdash_{\textit{KND}} A^{*}.
-  \]
-  \textbf{Goal.}\; $\Gamma\vdash_{\textit{KND}} A$.
-  
-  \bigskip
-  \noindent
-  We distinguish the shape of $A$.
-  
-  %------------------------------------------------------------
-  \paragraph{\textsc{Atomic case} \boldmath$(A=p)$.}
-  \[
-    \Gamma\vdash \neg\neg p
-    \;\xRightarrow{\ \neg\neg E\ }\;
-    \Gamma\vdash p.
-  \]
-  
-  %------------------------------------------------------------
-  \paragraph{\textsc{Conjunction} \boldmath$(A=A_1\land A_2)$.}
-  
-  \begin{enumerate}[leftmargin=1.5em,labelsep=.5em,label={\textbf{Step~\arabic*:}}]
-    \item $\Gamma\vdash \neg\neg(A_1^{*}\land A_2^{*})$
-          \hfill(assumption)
-    \item $\Gamma\vdash A_1^{*}\land A_2^{*}$
-          \hfill$\neg\neg E$
-    \item $\Gamma\vdash A_1^{*}$, \;$\Gamma\vdash A_2^{*}$
-          \hfill$\land E_1,\land E_2$
-    \item $\Gamma\vdash A_1$, \;$\Gamma\vdash A_2$
-          \hfill(IH on $A_1$, $A_2$)
-    \item $\Gamma\vdash A_1\land A_2$
-          \hfill$\land I$
-  \end{enumerate}
-  
-  %------------------------------------------------------------
-  \paragraph{Disjunction \boldmath$(A = A_{1}\lor A_{2})$.}
-
-\begin{enumerate}[leftmargin=1.5em,labelsep=.5em,
-                  label=\textbf{Step~\arabic*:}]
-  \item $\Gamma \vdash \neg\neg(A_{1}^{*}\lor A_{2}^{*}).$
-  \item $\Gamma \vdash A_{1}^{*}\lor A_{2}^{*}$ \hfill $\neg\neg E$
-  \item $\Gamma, A_{1}^{*} \vdash A_{1}$ \hfill IH on $A_{1}$
-  \item $\Gamma, A_{1}^{*} \vdash A_{1}\lor A_{2}$ \hfill $\lor I_{1}$ on Step 3
-  \item $\Gamma, A_{2}^{*} \vdash A_{2}$ \hfill IH on $A_{2}$
-  \item $\Gamma, A_{2}^{*} \vdash A_{1}\lor A_{2}$ \hfill $\lor I_{2}$ on Step 5
-  \item $\Gamma \vdash A_{1}\lor A_{2}$ \hfill $\lor E$ on Steps 2, 4, 6
-\end{enumerate}
-
-
-  
-  %------------------------------------------------------------
-  \paragraph{Implication \boldmath$(A = A_{1}\supset A_{2})$.}
-
-\begin{enumerate}[leftmargin=1.5em,labelsep=.5em,
-                  label=\textbf{Step~\arabic*:}]
-  \item $\Gamma \vdash \neg\neg\bigl(A_{1}^{*}\supset A_{2}^{*}\bigr).$
-  \item $\Gamma \vdash A_{1}^{*}\supset A_{2}^{*}$ \hfill $\neg\neg E$
-  \item $\Gamma , A_{1} \vdash A_{1}^{*}$ \hfill (ND$\!\to$KND lemma)
-  \item $\Gamma , A_{1} \vdash A_{2}^{*}$ \hfill $\supset E$ on Steps 2–3
-  \item $\Gamma , A_{1} \vdash A_{2}$ \hfill IH on $A_{2}$
-  \item $\Gamma \vdash A_{1}\supset A_{2}$ \hfill $\supset I$ on Step 5
-\end{enumerate}
-
-  
-  %------------------------------------------------------------
-  \paragraph{Other constructors.}
-  $\top$, $\bot$, and $\neg$ are immediate
-  (\(\top\!I\), \(\bot\!E\), \(\neg I/E\)) and follow the same IH pattern.
-  
-  \bigskip
-  In every case the goal $\Gamma\vdash A$ is obtained, completing the induction.
-  \end{proof}
-
-
-
-
-
-
-\section{Beluga}
-\begin{lstlisting}
-  i : type. % Type of individuals; we leave elements abstract.
-
-LF o : type =  % formulas
-  | ⊃ : o -> o -> o
-  | ⊤ : o
-  | ⊥ : o
-  | ∧   : o → o → o
-  | ∨   : o → o → o
-  | ¬  : o -> o
-  | ∀  : (i → o) → o     % ∀ \x. A(x) ⊃ B    ∀ \x. A(x) ⊃ B(x) 
-  | ∃  : (i → o) → o     % ∃ \x. A(x) ⊃ B    ∃ \x. A(x) ⊃ B(x) 
-;
-
---prefix ¬ 10. 
---infix ∧ 6 right. 
---infix ∨ 5 right. 
---infix ⊃ 4 right.
---prefix ∀ 8. 
---prefix ∃ 8.
-
-
-LF nd : o -> type = 
-  | ⊃I : (nd A -> nd B)
-	 -> nd (A ⊃ B)
-	       
-  | ⊃E : nd (A ⊃ B) -> nd A 			  
-	 -> nd B
-	       
-  | ¬I : ({p:o} nd A -> nd p)
-	 -> nd (¬ A)
-	       
-  | ¬E : nd (¬ A) -> nd A
-	 -> nd C
-	       
-  | ∧I : nd A → nd B
-	 → nd  (A ∧ B)
-	       
-  | ∧El : nd (A ∧ B)
-	  → nd A
-
-  | ∧Er : nd (A ∧ B)
-	  → nd B
-
-  | ∨Il : nd A
-	  → nd (A ∨ B)
-  | ∨Ir : nd B → nd (A ∨ B)
-  | ∨E  :  nd (A ∨ B)
-        → (nd A → nd C)
-        → (nd B → nd C)        
-        → nd C
-  | ⊤I : nd ⊤
-  | ⊥E : nd ⊥
-         → nd C
-;
-
-	 
-LF knd : o → type = 
-  | ⊃kI : (knd A → knd B)
-         → knd (A ⊃ B)
-  
-  | ⊃kE : knd (A ⊃ B) → knd A
-          → knd B
-  
-  | ∧kI   : knd A → knd B
-         → knd (A ∧ B)
-  
-  | ∧kEl  : knd (A ∧ B)
-         → knd A
-  
-  | ∧kEr  : knd (A ∧ B)
-         → knd B
-  
-  | ∨kIl  : knd A
-         → knd (A ∨ B)
-  
-  | ∨kIr  : knd B
-         → knd (A ∨ B)
-  
-  | ∨kE   : knd (A ∨ B)
-         → (knd A → knd C)
-         → (knd B → knd C)
-         → knd C
-  
-  | ⊤kI   : knd ⊤
-  
-  | ⊥kE : knd ⊥
-         → knd C
-  
-  | ¬kI   : ({p:o} knd A → knd p)
-            → knd (¬ A)
-
-  | ¬kE : knd (¬ A) -> knd A
-         -> knd C
-				     
-  | ¬¬kE  : knd (¬ (¬ A))
-            → knd A
-;
-
-LF ktrans : o -> o -> type =
-  | ktrans_∧I : ktrans A A* -> ktrans B B* -> 
-               ktrans (A ∧ B) (¬ (¬ (A* ∧ B*)))
-
-  | ktrans_⊃I : ktrans A A* -> ktrans B B* -> 
-               ktrans (A ⊃ B) (¬ (¬ (A* ⊃ B*)))
-
-  | ktrans_∨I : ktrans A A* -> ktrans B B* -> 
-               ktrans (A ∨ B) (¬ (¬ (A* ∨ B*)))
-
-  | ktrans_¬I : ktrans A A* ->
-               ktrans (¬ A) (¬ (¬ (¬ A*)))
-
-  | ktrans_⊤ : ktrans ⊤ (¬ (¬ ⊤))
-  
-  | ktrans_⊥ : ktrans ⊥ (¬ (¬ ⊥))
-;
-
-%{
-
-Translation context
-
-}%
-schema ctx = knd A ;
-schema nctx = nd A ;
-
-inductive Rel : {Γ:ctx} {Γ' : nctx} ctype =
-  | empty : Rel [ ] [ ]
-  | cons  : Rel [Γ] [Γ']
-            → Rel [Γ, a:knd A[]] [Γ', a:nd A[]];
-
-rec ktrans_of : [⊢ o] → [⊢ o] =
-fn A =>
-  case A of
-    | [⊢ A1 ∧ B1] =>
-        let [⊢ A1*] = ktrans_of [⊢ A1] in
-        let [⊢ B1*] = ktrans_of [⊢ B1] in
-        [⊢ ¬ (¬ (A1* ∧ B1*))]
-    | [⊢ A1 ⊃ B1] =>
-        let [⊢ A1*] = ktrans_of [⊢ A1] in
-        let [⊢ B1*] = ktrans_of [⊢ B1] in
-        [⊢ ¬ (¬ (A1* ⊃ B1*))]
-    | [⊢ A1 ∨ B1] =>
-        let [⊢ A1*] = ktrans_of [⊢ A1] in
-        let [⊢ B1*] = ktrans_of [⊢ B1] in
-        [⊢ ¬ (¬ (A1* ∨ B1*))]
-    | [⊢ ¬ A1] =>
-        let [⊢ A1*] = ktrans_of [⊢ A1] in
-        [⊢ ¬ (¬ (¬ A1*))]
-    | [⊢ ⊤] =>
-        [⊢ ¬ (¬ ⊤)]
-    | [⊢ ⊥] =>
-        [⊢ ¬ (¬ ⊥)]
+    \begin{lemma}[Back-Translation Lemma]
+    If \(\kolm(A, A^*)\) and \(\Gamma \vdash_{\textit{KND}} A^*\), then \(\Gamma \vdash_{\textit{KND}} A\).
+    \end{lemma}
     
-;
-
-rec existsktrans : {A : [⊢ o]} {A* : [⊢ o]} [⊢ ktrans A A*] = 
-mlam A => mlam A* =>
-  case [⊢ A] of
-  | [⊢ A1 ∧ B1] =>
-    (case [⊢ A*] of
-    | [⊢  ¬ (¬ (A1* ∧ B1*))] =>
-      let [⊢ KA] = existsktrans [⊢ A1] [⊢ A1*] in
-      let [⊢ KB] = existsktrans [⊢ B1] [⊢ B1*] in
-      [⊢ ktrans_∧I KA KB])
-  | [⊢ A1 ⊃ B1] =>
-    (case [⊢ A*] of
-    | [⊢  ¬ (¬ (A1* ⊃ B1*))] =>
-      let [⊢ KA] = existsktrans [⊢ A1] [⊢ A1*] in
-      let [⊢ KB] = existsktrans [⊢ B1] [⊢ B1*] in
-      [⊢ ktrans_⊃I KA KB])
-  | [⊢ A1 ∨ B1] =>
-    (case [⊢ A*] of
-    | [⊢  ¬ (¬ (A1* ∨ B1*))] =>
-      let [⊢ KA] = existsktrans [⊢ A1] [⊢ A1*] in
-      let [⊢ KB] = existsktrans [⊢ B1] [⊢ B1*] in
-      [⊢ ktrans_∨I KA KB])
-  | [⊢ ¬ A1] =>
-    (case [⊢ A*] of
-    | [⊢  ¬ (¬ (¬ A1*))] =>
-      let [⊢ KA] = existsktrans [⊢ A1] [⊢ A1*] in
-      [⊢ ktrans_¬I KA])
-  | [⊢ ⊤] =>
-    (case [⊢ A*] of
-    | [⊢ ¬ (¬ ⊤)] =>
-      [⊢ ktrans_⊤])
-  | [⊢ ⊥] =>
-    (case [⊢ A*] of
-    | [⊢ ¬ (¬ ⊥)] =>
-      [⊢ ktrans_⊥])
-;
-
-rec dnotx : Rel [Γ] [Γ'] → [Γ' ⊢ nd A] → [Γ' ⊢ nd (¬ (¬ A))] =
-fn rel => fn prf =>
-  let [Γ' ⊢ D[]] = prf in
-  [Γ' ⊢ ¬I (\p. \u. ¬E u D[])]
-;
-
-rec triple_neg_red : Rel [Γ] [Γ'] → [Γ' ⊢ nd (¬ (¬ (¬ A[])))] → [Γ' ⊢ nd (¬ A[])] =
-fn rel => fn prf =>
-  let [Γ' ⊢ D[]] = prf in
-  [Γ' ⊢ ¬I (\p. \u. ¬E D[] (¬I (\q. \v. ¬E v u)))]
-;
-
-rec dneg_falser : Rel [Γ] [Γ'] → [Γ' ⊢ nd (¬ (¬ ⊥))] → [Γ' ⊢ nd C[]] =
-fn rel => fn prf =>
-  let [Γ' ⊢ D[]] = prf in
-  [Γ' ⊢ ¬E D[] (¬I \p. \u. (⊥E u))]
-;
-
-rec sound : Rel [Γ] [Γ'] → [Γ ⊢ knd A[]] → [ ⊢ ktrans A A*] → [Γ' ⊢ nd A*[]] =
-fn rel => fn prf => fn kolm =>
-  case (prf, kolm) of
-  | ([Γ ⊢ ∧kI NKA NKB], [ ⊢ ktrans_∧I KA KB]) =>
-    let [Γ' ⊢ NJA] = sound rel [Γ ⊢ NKA] [ ⊢ KA] in
-    let [Γ' ⊢ NJB] = sound rel [Γ ⊢ NKB] [ ⊢ KB] in
-    dnotx rel [Γ' ⊢ ∧I NJA NJB]
-  | ([Γ ⊢ ∧kEl (NK1 : knd (A[] ∧ B[]))], [⊢ (KA : (ktrans A (¬(¬ A**))))]) =>
-    let [⊢ B*] = ktrans_of [⊢ B] in
-    let [⊢ KB] = existsktrans [⊢ B] [⊢ B*] in
-    let [Γ' ⊢ NJ1[]] = sound rel [Γ ⊢ NK1] [⊢ ktrans_∧I KA KB] in
-    [Γ' ⊢ ¬I (\p. \u.
-      ¬E NJ1[] (
-        ¬I (\q. \v.
-          ¬E (∧El v) u)))]
-  | ([Γ ⊢ ∧kEr (NK1 : knd (A[] ∧ B[]))], [⊢ (KB : (ktrans B (¬(¬ B**))))]) =>
-    let [⊢ A*] = ktrans_of [⊢ A] in
-    let [⊢ KA] = existsktrans [⊢ A] [⊢ A*] in
-    let [Γ' ⊢ NJ1[]] = sound rel [Γ ⊢ NK1] [⊢ ktrans_∧I KA KB] in
-    [Γ' ⊢ ¬I (\p. \u.
-      ¬E NJ1[] (
-        ¬I (\q. \v.
-          ¬E (∧Er v) u)))]
-  | ([Γ ⊢ ⊃kI \u. (NKB : knd B[])], [⊢ ktrans_⊃I (KA : (ktrans A A*)) (KB : (ktrans B B*))]) =>
-    let [Γ', v:nd A*[] ⊢ v] = sound (cons rel) [Γ, u:knd A[] ⊢ u] [⊢ KA] in
-    let [Γ', v:nd A*[] ⊢ NJB] = sound (cons rel) [Γ, u:knd _ ⊢ NKB] [⊢ KB] in
-    dnotx rel [Γ' ⊢ ⊃I \u. NJB]
-  | ([Γ ⊢ ⊃kE (NKI : knd (A[] ⊃ B[])) (NKA : knd A[])], [⊢ (KB : (ktrans B (¬(¬ B**))))]) =>
-    let [⊢ A*] = ktrans_of [⊢ A] in
-    let [⊢ KA] = existsktrans [⊢ A] [⊢ A*] in
-    let [Γ' ⊢ NJA[]] = sound rel [Γ ⊢ NKA] [⊢ KA] in
-    let [Γ' ⊢ NJI[]] = sound rel [Γ ⊢ NKI] [⊢ ktrans_⊃I KA KB] in
-    [Γ' ⊢ ¬I (\p. \u.
-      ¬E NJI[] (
-        ¬I (\q. \v. 
-          ¬E (⊃E v NJA[]) u)))]
-  | ([Γ ⊢ ∨kIl NK], [⊢ ktrans_∨I KA KB]) =>
-    let [Γ' ⊢ NJ] = sound rel [Γ ⊢ NK] [⊢ KA] in
-    dnotx rel [Γ' ⊢ ∨Il NJ]
-  | ([Γ ⊢ ∨kIr NK], [⊢ ktrans_∨I KA KB]) =>
-    let [Γ' ⊢ NJ] = sound rel [Γ ⊢ NK] [⊢ KB] in
-    dnotx rel [Γ' ⊢ ∨Ir NJ]
-  | ([Γ ⊢ ∨kE (NK : knd (A[] ∨ B[])) (\ua. NKA) (\ub. NKB)], [⊢ (KC : (ktrans C (¬(¬ C**))))]) =>
-    let [⊢ A*] = ktrans_of [⊢ A] in
-    let [⊢ B*] = ktrans_of [⊢ B] in
-    let [⊢ KA] = existsktrans [⊢ A] [⊢ A*] in
-    let [⊢ KB] = existsktrans [⊢ B] [⊢ B*] in
-    let [Γ' ⊢ NJ[]] = sound rel [Γ ⊢ NK] [⊢ ktrans_∨I KA KB] in
-    let [Γ', va:nd (¬(¬ A**[])) ⊢ va] = sound (cons rel) [Γ, ua:knd A[] ⊢ ua] [⊢ KA] in
-    let [Γ', vb:nd (¬(¬ B**[])) ⊢ vb] = sound (cons rel) [Γ, ub:knd B[] ⊢ ub] [⊢ KB] in
-    let [Γ', va:nd (¬(¬ A**[])) ⊢ NJA[]] = sound (cons rel) [Γ, ua:knd A[] ⊢ NKA] [⊢ KC] in
-    let [Γ', vb:nd (¬(¬ B**[])) ⊢ NJB[]] = sound (cons rel) [Γ, ub:knd B[] ⊢ NKB] [⊢ KC] in
-    [Γ' ⊢ ¬I (\p. \u.
-      ¬E NJ[] (
-        ¬I (\q. \v.
-          ¬E (∨E v (\va. NJA[]) (\vb.NJB[])) u)))]
-  %{| ([Γ ⊢ ¬kI \p. \u. NK1], [⊢ ktrans_¬I (K : (ktrans A A*))]) =>
-    let [⊢ kp] = existsktrans [⊢ ⊥] [⊢ ¬ (¬ ⊥)] in
-    let [Γ', v: nd A*[] ⊢ v] = sound (cons rel) [Γ, u:knd A[] ⊢ u] [⊢ K] in
-    let [Γ', v: nd A*[] ⊢ NJ1[..,_,_]] = sound (cons rel) [Γ, u: knd A[] ⊢ NK1[..,⊥,_]] [⊢ kp] in
-    let [Γ' ⊢ NJ1N[]] = dneg_falser rel [Γ'⊢ NJ1] in
-    dnotx rel [Γ' ⊢ ¬I (\p. \u. NJ1N[..,p])]}%
-  | ([Γ ⊢ ¬kE NK1 (NK2 : knd A[])], [⊢ KC]) =>
-    let [⊢ A*] = ktrans_of [⊢ A] in
-    let [⊢ KA] = existsktrans [⊢ A] [⊢ A*] in
-    let [Γ' ⊢ NJ1] = sound rel [Γ ⊢ NK1] [⊢ ktrans_¬I KA] in
-    let [Γ' ⊢ NJ2] = sound rel [Γ ⊢ NK2] [⊢ KA] in
-    let [Γ' ⊢ NJ1'] = triple_neg_red rel [Γ' ⊢ NJ1] in
-    [Γ' ⊢ ¬E NJ1' NJ2]
-;
-
-rec nj_nk : Rel [Γ] [Γ'] → [Γ' ⊢ nd A[]] → [Γ ⊢ knd A[]] = 
-fn rel => fn prf =>
-  case prf of
-  | [Γ' ⊢ ∧I NJA NJB] =>
-    let [Γ ⊢ NKA] = nj_nk rel [Γ' ⊢ NJA] in
-    let [Γ ⊢ NKB] = nj_nk rel [Γ' ⊢ NJB] in
-    [Γ ⊢ ∧kI NKA NKB]
-  | [Γ' ⊢ ∧El NJ] =>
-    let [Γ ⊢ NK] = nj_nk rel [Γ' ⊢ NJ] in
-    [Γ ⊢ ∧kEl NK]
-  | [Γ' ⊢ ∧Er NJ] =>
-    let [Γ ⊢ NK] = nj_nk rel [Γ' ⊢ NJ] in
-    [Γ ⊢ ∧kEr NK]
-  | [Γ' ⊢ ⊃I \u. NJ] =>
-    let [Γ, a: knd A[] ⊢ NK] = nj_nk (cons rel) [Γ', a:nd _ ⊢ NJ] in
-    [Γ ⊢ ⊃kI \u. NK]
-  | [Γ' ⊢ ⊃E NJI NJA] =>
-    let [Γ ⊢ NKI] = nj_nk rel [Γ' ⊢ NJI] in
-    let [Γ ⊢ NKA] = nj_nk rel [Γ' ⊢ NJA] in
-    [Γ ⊢ ⊃kE NKI NKA]
-  | [Γ' ⊢ ∨Il NJ] =>
-    let [Γ ⊢ NK] = nj_nk rel [Γ' ⊢ NJ] in
-    [Γ ⊢ ∨kIl NK]
-  | [Γ' ⊢ ∨Ir NJ] =>
-    let [Γ ⊢ NK] = nj_nk rel [Γ' ⊢ NJ] in
-    [Γ ⊢ ∨kIr NK]
-  | [Γ' ⊢ ∨E NJ (\ua. NJ1) (\ub. NJ2)] =>
-    let [Γ ⊢ NK] = nj_nk rel [Γ' ⊢ NJ] in
-    let [Γ, a: knd A[] ⊢ NK1] = nj_nk (cons rel) [Γ', a:nd _ ⊢ NJ1] in
-    let [Γ, a: knd B[] ⊢ NK2] = nj_nk (cons rel) [Γ', a:nd _ ⊢ NJ2] in
-    [Γ ⊢ ∨kE NK (\va.NK1) (\vb.NK2)]
-  %{| [Γ' ⊢ ¬I \p. \u. NJ] =>
-    let [Γ, a: knd A[] ⊢ NK] = nj_nk (cons rel) [Γ', a:nd _ ⊢ NJ[..]] in
-    [Γ' ⊢ ⊃kI \q. \v. NK]}%
-  | [Γ' ⊢ ¬E NJ1 NJ2] =>
-    let [Γ ⊢ NK1] = nj_nk rel [Γ' ⊢ NJ1] in
-    let [Γ ⊢ NK2] = nj_nk rel [Γ' ⊢ NJ2] in
-    [Γ ⊢ ¬kE NK1 NK2]
-;
-
-rec equiv : Rel [Γ] [Γ'] → [⊢ ktrans A A*] → [Γ ⊢ knd A*[]] → [Γ ⊢ knd A[]] =
-fn rel => fn kolm => fn prf =>
-  case (kolm, prf) of
-  | ([⊢ ktrans_∧I KA KB], [Γ ⊢ (D : knd (¬(¬(A* ∧ B*))))]) =>
-    let [Γ ⊢ NKA] = equiv rel [⊢ KA] [Γ ⊢ ∧kEl (¬¬kE D)] in 
-    let [Γ ⊢ NKB] = equiv rel [⊢ KB] [Γ ⊢ ∧kEr (¬¬kE D)] in
-    [Γ ⊢ ∧kI NKA NKB]
-  %{| ([⊢ ktrans_⊃I KA KB], [Γ ⊢ (D : knd (¬(¬(A* ⊃ B*))))]) =>
-    let [Γ ⊢ NKAB[]] = [Γ ⊢ ¬¬kE D] in
-    [Γ ⊢ ⊃kI (\u.
-      let [Γ' ⊢ E] = sound rel [⊢ KA] [Γ ⊢ u] in
-      let [Γ ⊢ E'[]] = nj_nk rel [Γ' ⊢ E] in
-      let [Γ ⊢ NKB] = ⊃kE NKAB[] E'[] in
-      equiv rel [⊢ KB] [Γ ⊢ NKB])
-    ]}%
-  %{| ([⊢ ktrans_∨I KA KB], [Γ ⊢ (D : knd (¬(¬(A* ∨ B*))))]) =>
-    let [Γ ⊢ NKAB[]] = [Γ ⊢ ¬¬kE D] in
-    let [Γ ⊢ NKA[]] = equiv rel [⊢ KA] [Γ ⊢ ∨kIl NKAB[]] in
-    let [Γ ⊢ NKB[]] = equiv rel [⊢ KB] [Γ ⊢ ∨kIr NKAB[]] in
-    [Γ ⊢ ∨kE NKAB[] (\u. NKA[]) (\v.NKB[])]}%
-  | ([⊢ ktrans_⊤], [Γ ⊢ (D : knd (¬(¬ ⊤)))]) =>
-    [Γ ⊢ ¬¬kE D]
-  | ([⊢ ktrans_⊥], [Γ ⊢ (D : knd (¬(¬ ⊥)))]) =>
-    [Γ ⊢ ¬¬kE D]
+    \begin{proof}
+    \leavevmode\par
+    \textbf{Induction hypothesis (IH).}\;
+    For every proper subformula \(B\) of \(A\),
+    \(
+      \operatorname{kolm}(B,B^{*}),\;
+      \vdash_{\textit{KND}} B^{*}
+      \;\Rightarrow\;
+      \vdash_{\textit{KND}} B .
+    \)
     
-;
+    \medskip
+    \textbf{Assumptions for the current step}
+    \[
+      \operatorname{kolm}(A,A^{*}),\qquad
+      \Gamma\vdash_{\textit{KND}} A^{*}.
+    \]
+    \textbf{Goal.}\; \(\Gamma\vdash_{\textit{KND}} A\).
+    
+    \bigskip
+    \noindent
+    We distinguish the shape of \(A\).
+    
+    %------------------------------------------------------------
+    \paragraph{\textsc{Atomic case} \boldmath$(A=p)$.}
+    \[
+      \Gamma\vdash \neg\neg p
+      \;\xRightarrow{\ \neg\neg E\ }\;
+      \Gamma\vdash p.
+    \]
+    
+    %------------------------------------------------------------
+    \paragraph{\textsc{Conjunction} \boldmath$(A=A_1\land A_2)$.}
+    
+    \begin{enumerate}[leftmargin=1.5em,labelsep=.5em,label={\textbf{Step~\arabic*:}}]
+      \item \(\Gamma\vdash \neg\neg(A_1^{*}\land A_2^{*})\)
+            \hfill(assumption)
+      \item \(\Gamma\vdash A_1^{*}\land A_2^{*}\)
+            \hfill\(\neg\neg E\)
+      \item \(\Gamma\vdash A_1^{*}\), \;\(\Gamma\vdash A_2^{*}\)
+            \hfill\(\land E_1,\land E_2\)
+      \item \(\Gamma\vdash A_1\), \;\(\Gamma\vdash A_2\)
+            \hfill(IH on \(A_1\), \(A_2\))
+      \item \(\Gamma\vdash A_1\land A_2\)
+            \hfill\(\land I\)
+    \end{enumerate}
+    
+    %------------------------------------------------------------
+    \paragraph{Disjunction \boldmath$(A = A_{1}\lor A_{2})$.}
+    
+    \begin{enumerate}[leftmargin=1.5em,labelsep=.5em,label={\textbf{Step~\arabic*:}}]
+      \item \(\Gamma \vdash \neg\neg(A_{1}^{*}\lor A_{2}^{*})\)
+      \item \(\Gamma \vdash A_{1}^{*}\lor A_{2}^{*}\) \hfill \(\neg\neg E\)
+      \item \(\Gamma, A_{1}^{*} \vdash A_{1}\) \hfill IH on \(A_{1}\)
+      \item \(\Gamma, A_{1}^{*} \vdash A_{1}\lor A_{2}\) \hfill \(\lor I_{1}\)
+      \item \(\Gamma, A_{2}^{*} \vdash A_{2}\) \hfill IH on \(A_{2}\)
+      \item \(\Gamma, A_{2}^{*} \vdash A_{1}\lor A_{2}\) \hfill \(\lor I_{2}\)
+      \item \(\Gamma \vdash A_{1}\lor A_{2}\) \hfill \(\lor E\) on Steps 2, 4, 6
+    \end{enumerate}
+    
+    %------------------------------------------------------------
+    \paragraph{Implication \boldmath$(A = A_{1}\supset A_{2})$.}
+    
+    \begin{enumerate}[leftmargin=1.5em,labelsep=.5em,label={\textbf{Step~\arabic*:}}]
+      \item \(\Gamma \vdash \neg\neg\bigl(A_{1}^{*}\supset A_{2}^{*}\bigr)\)
+      \item \(\Gamma \vdash A_{1}^{*}\supset A_{2}^{*}\) \hfill \(\neg\neg E\)
+      \item \(\Gamma , A_{1} \vdash A_{1}^{*}\) \hfill (ND\(\to\)KND lemma)
+      \item \(\Gamma , A_{1} \vdash A_{2}^{*}\) \hfill \(\supset E\) on Steps 2–3
+      \item \(\Gamma , A_{1} \vdash A_{2}\) \hfill IH on \(A_{2}\)
+      \item \(\Gamma \vdash A_{1}\supset A_{2}\) \hfill \(\supset I\)
+    \end{enumerate}
+    
+    %------------------------------------------------------------
+    \paragraph{Other constructors.}
+    \(\top\), \(\bot\), and \(\neg\) are immediate
+    (\(\top\!I\), \(\bot\!E\), \(\neg I/E\)) and follow the same IH pattern.
+    
+    \bigskip
+    In every case the goal \(\Gamma\vdash A\) is obtained, completing the induction.
+    \end{proof}
 
-rec completeness :  Rel [Γ] [Γ'] → [Γ' ⊢ nd A*[]] → [⊢ ktrans A A*] → [Γ ⊢ knd A[]] =
-fn rel => fn A* => fn kolm =>
-  equiv rel kolm (nj_nk rel A*)
-;
+    \bigskip
+
+  \begin{lemma}[Kolmogorov Equivalence Lemma]
+    \label{lem:equiv}
+    Let $A$ be a classical formula and $A^*$ its Kolmogorov translation. If $A^*$ is derivable in classical natural deduction, then so is $A$. That is:
+    \[
+    \text{If } \textsf{kolm}(A, A^*), \text{ and } \vdash_{\textsf{knd}} A^* \text{ then } \vdash_{\textsf{knd}} A.
+    \]
+    
+    \textbf{Proof.}  
+    By induction on the derivation of $\textsf{kolm}(A, A^*)$.
+    
+    \medskip
+
+    \noindent \textbf{Case:} $\textsf{kolm}(A, \neg\neg A)$  
+    \[
+    \infer[\text{kolm base}]{\textsf{kolm}(A, \neg\neg A)}{}
+    \]
+    By assumption, $\textsf{knd}(\neg\neg A)$ \hfill (1)\\
+    By rule $\textsf{$\neg\neg$ kE}$ on (1), we derive $\textsf{knd}(A)$.
+    
+    \medskip
+    
+    \noindent \textbf{Case:} 
+    \[
+    \infer[\text{kolm$\wedge$}]{\textsf{kolm}(A \wedge B, \neg\neg (A^* \wedge B^*))}{
+      \textsf{kolm}(A, A^*) \quad \textsf{kolm}(B, B^*)
+    }
+    \]
+    By assumption, $\textsf{knd}(\neg\neg (A^* \wedge B^*))$ \hfill (1)\\
+    By $\textsf{$\neg\neg$ kE}$ on (1), we get $\textsf{knd}(A^* \wedge B^*)$ \hfill (2)\\
+    By $\textsf{$\wedge$ kE1}$ on (2), we obtain $\textsf{knd}(A^*)$ \hfill (3)\\
+    By $\textsf{$\wedge$ kE2}$ on (2), we obtain $\textsf{knd}(B^*)$ \hfill (4)\\
+    By IH on $\textsf{kolm}(A, A^*)$ and (3), we obtain $\textsf{knd}(A)$ \hfill (5)\\
+    By IH on $\textsf{kolm}(B, B^*)$ and (4), we obtain $\textsf{knd}(B)$ \hfill (6)\\
+    By $\textsf{$\wedge$ kI}$ on (5) and (6), we derive $\textsf{knd}(A \wedge B)$.
+    
+    \medskip
+    
+    \noindent \textbf{Case:} 
+    \[
+    \infer[\text{kolm$\supset$}]{\textsf{kolm}(A \supset B, \neg\neg (A^* \supset B^*))}{
+      \textsf{kolm}(A, A^*) \quad \textsf{kolm}(B, B^*)
+    }
+    \]
+    By assumption, $\textsf{knd}(\neg\neg (A^* \supset B^*))$ \hfill (1)\\
+    By $\textsf{$\neg\neg$ kE}$ on (1), we obtain $\textsf{knd}(A^* \supset B^*)$ \hfill (2)\\
+    Assume $\textsf{knd}(A)$ [for $\supset$kI] \hfill (3)\\
+    By the Soundness Lemma on $\textsf{kolm}(A, A^*)$ and (3), we obtain $\textsf{nd}(A^*)$ \hfill (4)\\
+    By the Back-Translation Lemma on (4), we obtain $\textsf{knd}(A^*)$ \hfill (5)\\
+    Apply $\textsf{$\supset$ kE}$ to (2) and (5), we get $\textsf{knd}(B^*)$ \hfill (6)\\
+    By IH on $\textsf{kolm}(B, B^*)$ and (6), we get $\textsf{knd}(B)$ \hfill (7)\\
+    By $\textsf{$\supset$ kI}$ on assumption (3) ⟶ (7), we derive $\textsf{knd}(A \supset B)$.
+    
+    \medskip
+    
+    \noindent \textbf{Case:} 
+    \[
+    \infer[\text{kolm$\vee$}]{\textsf{kolm}(A \vee B, \neg\neg (A^* \vee B^*))}{
+      \textsf{kolm}(A, A^*) \quad \textsf{kolm}(B, B^*)
+    }
+    \]
+    By assumption, $\textsf{knd}(\neg\neg (A^* \vee B^*))$ \hfill (1)\\
+    By $\textsf{$\neg\neg$ kE}$ on (1), we get $\textsf{knd}(A^* \vee B^*)$ \hfill (2)\\
+    Perform case analysis on (2):\\
+    \quad If $\textsf{$\vee$ kIl}$ gives $\textsf{knd}(A^*)$ \hfill (3)\\
+    \quad \quad By IH on $\textsf{kolm}(A, A^*)$ and (3), we get $\textsf{knd}(A)$ \hfill (4)\\
+    \quad \quad Apply $\textsf{$\vee$ kIl}$ to (4), we obtain $\textsf{knd}(A \vee B)$\\
+    \quad If $\textsf{$\vee$ kIr}$ gives $\textsf{knd}(B^*)$ \hfill (5)\\
+    \quad \quad By IH on $\textsf{kolm}(B, B^*)$ and (5), we get $\textsf{knd}(B)$ \hfill (6)\\
+    \quad \quad Apply $\textsf{$\vee$ kIr}$ to (6), we obtain $\textsf{knd}(A \vee B)$
+    
+    \medskip
+    
+    \noindent \textbf{Case:} 
+    \[
+    \infer[\text{kolm$\neg$}]{\textsf{kolm}(\neg A, \neg\neg\neg A^*)}{
+      \textsf{kolm}(A, A^*)
+    }
+    \]
+    By assumption, $\textsf{knd}(\neg\neg\neg A^*)$ \hfill (1)\\
+    Apply $\textsf{$\neg\neg$ kE}$ on (1), we obtain $\textsf{knd}(\neg A^*)$ \hfill (2)\\
+    Assume $\textsf{knd}(A)$ [for $\neg$kI] \hfill (3)\\
+    By the Soundness Lemma on $\textsf{kolm}(A, A^*)$ and (3), we obtain $\textsf{nd}(A^*)$ \hfill (4)\\
+    By the Back-Translation Lemma on (4), we obtain $\textsf{knd}(A^*)$ \hfill (5)\\
+    Apply $\textsf{$\neg$ kE}$ on (2) and (5), we derive $\textsf{knd}(\bot)$ \hfill (6)\\
+    By $\textsf{$\neg$ kI}$ on assumption (3) ⟶ (6), we conclude $\textsf{knd}(\neg A)$
+    
+    \medskip
+    
+    \noindent \textbf{Case:} 
+    \[
+    \textsf{kolm}(\top, \neg\neg \top)
+    \]
+    By assumption, $\textsf{knd}(\neg\neg \top)$ \hfill (1)\\
+    Apply $\textsf{$\neg\neg$ kE}$ on (1), we obtain $\textsf{knd}(\top)$
+    
+    \medskip
+    
+    \noindent \textbf{Case:} 
+    \[
+    \textsf{kolm}(\bot, \neg\neg \bot)
+    \]
+    By assumption, $\textsf{knd}(\neg\neg \bot)$ \hfill (1)\\
+    Apply $\textsf{$\neg\neg$ kE}$ on (1), we obtain $\textsf{knd}(\bot)$
+    \end{lemma}
+
+    \bigskip
+
+    We now prove that if the Kolmogorov translation $A^*$ of a classical formula $A$ is provable intuitionistically, then $A$ is also classically provable. That is, Kolmogorov translation is complete with respect to classical provability.
+
+
+    \label{lem:completeness}
+    If $\textsf{nd}(A^*)$ and $\textsf{kolm}(A, A^*)$, then $\textsf{knd}(A)$.
+    
+    
+    \begin{proof}
+    By assumption, we are given:
+    \begin{itemize}
+        \item $\textsf{nd}(A^*)$ \hfill (1)
+        \item $\textsf{kolm}(A, A^*)$ \hfill (2)
+    \end{itemize}
+    
+    Apply the Back-Translation Lemma to (1), we obtain:
+    \[
+    \textsf{knd}(A^*) \hfill (3)
+    \]
+    
+    Then apply the Kolmogorov Equivalence Lemma (Lemma~\ref{lem:equiv}) to (2) and (3), yielding:
+    \[
+    \textsf{knd}(A)
+    \]
+    
+    This concludes the proof.
+    \end{proof}
 
 
 
-\end{lstlisting}
 
 
 
@@ -1043,5 +910,8 @@ fn rel => fn A* => fn kolm =>
 
 
 
+\bibliographystyle{plain}  
+\bibliography{references}  
+\end{document}
 
 \end{document}
